--- a/.gitignore
+++ b/.gitignore
@@ -93,8 +93,10 @@ ipython_config.py
 __pypackages__/
 
 # Celery stuff
-celerybeat-schedule
-celerybeat.pid
+celerybeat-schedule.db
+celerybeat-schedule.bak
+celerybeat-schedule.dir
+celerybeat-schedule.dat
 
 # SageMath parsed files
 *.sage.py
