--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-gaioredis==1.3.1
+aioredis==1.3.1
 amqp==5.0.6
+anyjson==0.3.3
 asgiref==3.3.1
 async-timeout==3.0.1
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
 billiard==3.6.4.0
-cached-property==1.5.2
-celery==5.1.0
+celery==5.0.5
 certifi==2021.5.30
 cffi==1.14.5
 channels==3.0.3
@@ -25,12 +25,10 @@ django-celery-beat==2.2.0
 django-celery-results==2.0.1
 django-channels==0.7.0
 django-crispy-forms==1.11.2
-django-redis==5.0.0
 django-timezone-field==4.1.2
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==2.10
-importlib-metadata==4.5.0
 incremental==21.3.0
 kombu==5.1.0
 msgpack==1.0.2
@@ -50,10 +48,9 @@ service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.1
 Twisted==21.2.0
+twisted-iocpsupport==1.0.1
 txaio==21.2.1
-typing-extensions==3.10.0.0
 urllib3==1.26.5
 vine==5.0.0
 wcwidth==0.2.5
-zipp==3.4.1
 zope.interface==5.4.0
